# cpp-esphome-api

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release-binaries.yml  release-packages.yml
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Packaging.cmake  ProtoGen.cmake  Sanitizers.cmake  esphome-api-clientConfig.cmake.in
docs/: Doxyfile.in  MODEL_SPEC.md
examples/: CMakeLists.txt  bluetooth_scan.cpp  common.hpp  control_light.cpp  discover.cpp  hello.cpp  list_entities.cpp  logs.cpp  noise_connect.cpp  subscribe_states.cpp
include/esphome/api/: api.hpp  bytes.hpp  client.hpp  client_options.hpp  config.hpp  discovery.hpp  exception.hpp  json.hpp  sync_client.hpp  version.hpp.in
include/esphome/api/commands/: command_builder.hpp
include/esphome/api/connection/: connection.hpp  connection_options.hpp  connection_state.hpp
include/esphome/api/crypto/: cipher_state.hpp  noise_handshake.hpp  primitives.hpp  symmetric_state.hpp
include/esphome/api/frame/: frame_helper.hpp  noise_frame_helper.hpp  plaintext_frame_helper.hpp
include/esphome/api/model/: device_info.hpp  entity.hpp  entity_handles.hpp  entity_registry.hpp  entity_store.hpp  entity_type.hpp  enums.hpp
include/esphome/api/model/entities/: alarm_control_panel.hpp  binary_sensor.hpp  button.hpp  camera.hpp  climate.hpp  cover.hpp  date.hpp  datetime.hpp  event.hpp  fan.hpp  infrared.hpp  light.hpp  lock.hpp  media_player.hpp  number.hpp  radio_frequency.hpp  select.hpp  sensor.hpp  siren.hpp  switch.hpp  text.hpp  text_sensor.hpp  time.hpp  update.hpp  valve.hpp  water_heater.hpp
include/esphome/api/proto/: message_registry.hpp  proto_fwd.hpp  proto_message.hpp  wire.hpp
include/esphome/api/subsystems/: bluetooth_proxy.hpp  home_assistant_services.hpp  log_stream.hpp  serial_proxy.hpp  subsystem.hpp  voice_assistant.hpp  zwave_proxy.hpp
include/esphome/api/transport/: executor.hpp  transport.hpp
proto/: api.proto  api_options.proto
src/: bytes.cpp  client.cpp  discovery.cpp  sync_client.cpp
src/commands/: command_builder.cpp
src/connection/: connection.cpp
src/crypto/: cipher_state.cpp  noise_handshake.cpp  primitives.cpp  symmetric_state.cpp
src/crypto/detail/: chacha20poly1305.cpp  chacha20poly1305.hpp  random.cpp  random.hpp  sha256.cpp  sha256.hpp  x25519.cpp  x25519.hpp
src/frame/: noise_frame_helper.cpp  plaintext_frame_helper.cpp
src/model/: device_info.cpp  entity_common.hpp  entity_store.cpp  entity_type.cpp
src/model/entities/: alarm_control_panel.cpp  binary_sensor.cpp  button.cpp  camera.cpp  climate.cpp  cover.cpp  date.cpp  datetime.cpp  event.cpp  fan.cpp  infrared.cpp  light.cpp  lock.cpp  media_player.cpp  number.cpp  radio_frequency.cpp  select.cpp  sensor.cpp  siren.cpp  switch.cpp  text.cpp  text_sensor.cpp  time.cpp  update.cpp  valve.cpp  water_heater.cpp
src/proto/: message_registry.cpp
src/subsystems/: bluetooth_proxy.cpp  home_assistant_services.cpp  log_stream.cpp  serial_proxy.cpp  voice_assistant.cpp  zwave_proxy.cpp
src/transport/: asio_executor.cpp  asio_executor.hpp  tcp_transport.cpp  tcp_transport.hpp
tests/: CMakeLists.txt  golden_vectors.inc  test_command_builder.cpp  test_connection_fsm.cpp  test_discovery.cpp  test_entity_handles.cpp  test_entity_store.cpp  test_message_registry.cpp  test_noise_frame.cpp  test_noise_vectors.cpp  test_plaintext_frame.cpp  test_subsystems.cpp  test_sync_client.cpp  test_varint.cpp  test_wire_golden.cpp
tests/support/: loopback_server.hpp  manual_executor.hpp  mock_transport.hpp
tools/: gen_message_ids.cpp
tools/protogen/: emit.hpp  emit_enums.cpp  emit_messages.cpp  emit_registry.cpp  lexer.cpp  lexer.hpp  main.cpp  model.hpp  parser.cpp  parser.hpp
